--- a/package.json
+++ b/package.json
@@ -47,5 +47,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "https://sleepy-bastion-08152.herokuapp.com/"
 }
